--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ section > p {
 	font-weight:bold;
 	margin:3% auto;
 	padding:3% 5%;
-	text-shadow: -1px -1px -1px #4a4a4a;
+	text-shadow: -1px -1px #4a4a4a;
 	width:70%;
 }
 
