--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ section > p {
 
 #img-box {float:left; width:60%;}
 
-#wrap {margin:0 auto; width:65%;}
+#container {margin:0 auto; width:65%;}
 
 /* CLASS */
 
